--- a/style.css
+++ b/style.css
@@ -27,6 +27,25 @@ body {
     /* border: 2px solid black */
 }
 
+.btn {
+    display: inline-block;
+    padding: 1em 2.5em;
+    margin-top: 1em;
+    text-decoration: none;
+    border-radius: 50px;
+    cursor: pointer;
+    outline: none;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.btn-primary {
+    background: #16a083;
+    color: #fff;
+}
+
+
+
 
 
 /* ################# Navbar Styling #################### */
@@ -77,18 +96,248 @@ body {
     font-size: 1.6rem;
     font-weight: 500;
     transition: color 0.4s ease-in-out;
-
 }
 
-.menu-items li a:hover {
+.navbar .menu-items a:hover {
     color: #117911;
 }
 
 
-
+/* ################## Showcase Styling ################### */
 
 .showcase-section {
-    border: 5px solid black;
+    /* border: 5px solid black; */
     /* margin-top: 10rem; */
-    color: #000;
+    /* color: #000; */
+    height: 55vh;
+    background: linear-gradient(rgba(240, 240, 240, 0.2), rgba(255, 255, 255, 0.3)), url("./img/header-image2.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.showcase-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    font-size: 1.6em;
+}
+
+.showcase-title {
+    text-transform: uppercase;
+    padding-bottom: 10px;
+}
+
+
+/* ################### About Us Styling ####################### */
+.about-us {
+    padding: 50px 0px;
+    background: #f5f5f7;
+}
+
+.about-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+
+    /* border: 2px solid red; */
+    background: rgba(201, 199, 199, 0.034);
+    box-shadow: 0px 10px 20px 20px rgba(124, 124, 124, 0.1);
+}
+
+.about-us h2 {
+    font-size: 3rem;
+}
+
+.about-us p {
+    font-size: 1.4rem;
+    color: #555;
+}
+
+.about-us .small {
+    font-size: 1.5rem;
+    color: #666;
+    font-weight: 600;
+}
+
+.about-img {
+    flex: 1 1 350px;
+    padding: 20px;
+    /* border: 2px solid green; */
+    transform: translateX(150%);
+    animation: about-img-animation 1s ease-in-out forwards;
+}
+
+@keyframes about-img-animation {
+    100% {
+        transform: translateX(0);
+    }
+}
+
+.about-text {
+    flex: 1 1 350px;
+    padding: 30px;
+    /* border: 2px solid black; */
+    margin: auto;
+    transform: translateX(-150%);
+    animation: about-txt-animation 1s ease-in-out forwards;
+}
+
+@keyframes about-txt-animation {
+    100% {
+        transform: translateX(0);
+    }
+}
+
+.about-img img {
+    display: block;
+    height: 350px;
+    max-width: 100%;
+    margin: auto;
+    object-fit: cover;
+    object-position: right;
+}
+
+
+
+
+
+/* ####################### Food Type Styling ################ */
+
+.food {
+    padding: 5rem 0 10rem 0;
+}
+
+.food h2 {
+    text-transform: uppercase;
+    color: #555;
+    text-align: center;
+    margin-bottom: 4rem;
+    font-size: 3rem;
+    font-weight: bold;
+}
+
+.food-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.food-container img {
+    display: block;
+    width: 100%;
+    margin: auto;
+    max-height: 300px;
+    object-fit: cover;
+    object-position: center;
+}
+
+.img-container {
+    margin: 0 1rem;
+    position: relative;
+}
+
+.img-content {
+    position: absolute;
+    top: 70%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    opacity: 0;
+    z-index: 2;
+    transition: all 0.4s ease-in-out;
+}
+
+.img-container:hover .img-content {
+    opacity: 1;
+    top: 50%
+}
+
+.img-content h3 {
+    font-size: 3rem;
+    color: #fff;
+}
+
+.img-content a {
+    font-size: 1.3rem;
+}
+
+.img-container::after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.871);
+    opacity: 0;
+    z-index: 1;
+
+    transform: scaleY(0);
+    transform-origin: 100% 100%;
+    transition: all 0.4s ease-in-out;
+}
+
+.img-container:hover::after {
+    opacity: 1;
+    transform: scaleY(1);
+}
+
+
+
+/* ########################## Food Menu Styling ############################ */
+.food-menu-heading {
+    text-align: center;
+    text-transform: uppercase;
+    color: #555;
+    /* margin-bottom: 4rem; */
+    font-size: 4rem;
+    font-weight: bold;
+}
+
+
+.food-menu-container {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 50px 0px 10px 10px;
+    /* border: 2px solid black; */
+}
+
+.food-menu-container img {
+    display: block;
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    object-position: center;
+    border-radius: 50%;
+}
+
+.food-menu-item {
+    display: flex;
+    flex: 1 1 535px;
+    justify-content: space-evenly;
+    margin-bottom: 2rem;
+}
+
+.food-menu-item .food-description {
+    margin: auto 1.5rem;
+    /* padding-left: 2rem; */
+}
+
+.food-title {
+    font-size: 2.5rem;
+    font-weight: bold;
+    color: #444;
+}
+
+.food-description p {
+    font-size: 1.4rem;
+    color: #555;
+    font-weight: 500;
+}
+
+.food-description .food-price {
+    color: #117964;
+    font-weight: bold;
 }
