--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@ body {
 
 
 
+
+
+
+
 /* #################### Utility Class ###################### */
 .container {
     max-width: 1200px;
@@ -42,7 +46,15 @@ body {
 .btn-primary {
     background: #16a083;
     color: #fff;
+    transition: background 0.3s ease-in-out;
 }
+
+.btn-primary:hover {
+    background: #0d614f;
+}
+
+
+
 
 
 
@@ -103,6 +115,12 @@ body {
 }
 
 
+
+
+
+
+
+
 /* ################## Showcase Styling ################### */
 
 .showcase-section {
@@ -129,6 +147,12 @@ body {
     text-transform: uppercase;
     padding-bottom: 10px;
 }
+
+
+
+
+
+
 
 
 /* ################### About Us Styling ####################### */
@@ -203,8 +227,10 @@ body {
 
 
 
-/* ####################### Food Type Styling ################ */
 
+
+
+/* ####################### Food Type Styling ################ */
 .food {
     padding: 5rem 0 10rem 0;
 }
@@ -286,6 +312,12 @@ body {
 
 
 
+
+
+
+
+
+
 /* ########################## Food Menu Styling ############################ */
 .food-menu-heading {
     text-align: center;
@@ -296,11 +328,10 @@ body {
     font-weight: bold;
 }
 
-
 .food-menu-container {
     display: flex;
     flex-wrap: wrap;
-    padding: 50px 0px 10px 10px;
+    padding: 50px 0px 0px 5px;
     /* border: 2px solid black; */
 }
 
@@ -340,4 +371,300 @@ body {
 .food-description .food-price {
     color: #117964;
     font-weight: bold;
+}
+
+
+
+
+
+/* ######################### Testimonial Styling ##################### */
+.testimonials .testimonial-title {
+    text-align: center;
+    font-size: 3rem;
+    font-weight: 400;
+    color: #555;
+}
+
+.testimonials {
+    padding: 5rem 0rem;
+    background: rgb(243, 243, 243);
+}
+
+.testimonial-container {
+    display: flex;
+    justify-content: space-between;
+    font-size: 1.5rem;
+    padding: 1rem;
+}
+
+.testimonial-container .checked {
+    color: #ff9529;
+
+}
+
+.testimonial-box .testimonial-text {
+    margin: 1rem 0;
+    color: #444;
+
+}
+
+.testimonial-box {
+    text-align: center;
+    padding: 1rem;
+
+}
+
+.customer-photo img {
+    display: block;
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    object-position: center;
+    border-radius: 50%;
+    margin: auto;
+}
+
+
+
+
+
+
+
+/* ############# Contact Styling ############## */
+.contact {
+    padding: 5rem 0;
+    background: rgb(226, 226, 226);
+}
+
+.contact-container {
+    display: flex;
+    background: #fff;
+    box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.1);
+
+}
+
+.contact-ing {
+    width: 50%;
+}
+
+.contact-img img {
+    display: block;
+    width: 95%;
+    height: 400px;
+    object-fit: cover;
+    object-position: center;
+}
+
+.contact-content {
+    padding: 1rem;
+    width: 50%;
+    margin: auto;
+}
+
+.contact-content input,
+.contact-content textarea {
+    display: block;
+    width: 100%;
+    border: none;
+    border-bottom: 2px solid #ddd;
+    padding: 1rem 0;
+    box-shadow: none;
+    outline: none;
+    margin-bottom: 1rem;
+    color: #444;
+    font-weight: 500;
+}
+
+.contact-container a {
+    font-size: 1.2rem;
+}
+
+
+
+/* ################## Footer Styling ###############3 */
+.footer h2 {
+    text-align: center;
+    font-size: 2rem;
+    padding: 3rem;
+    font-weight: 500;
+    color: #fff;
+    background: rgb(65, 65, 65);
+}
+
+
+
+
+
+
+/* ######################### Media Queries ################### */
+@media (max-width: 768px) {
+    .navbar {
+        opacity: 0.95;
+    }
+
+    .navbar-container input[type="checkbox"],
+    .navbar-container .hamburger-lines {
+        display: block;
+    }
+
+    .navbar-container {
+        display: block;
+        position: relative;
+        height: 64px;
+    }
+
+    .navbar-container input[type="checkbox"] {
+        position: absolute;
+        display: block;
+        height: 32px;
+        width: 40px;
+        top: 20px;
+        left: 20px;
+        z-index: 5;
+        opacity: 0;
+    }
+
+    .navbar-container .hamburger-lines {
+        display: block;
+        height: 32px;
+        width: 40px;
+        position: absolute;
+        top: 20px;
+        left: 20px;
+        z-index: 2;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .navbar-container .hamburger-lines .line {
+        display: block;
+        height: 4px;
+        width: 100%;
+        border-radius: 10px;
+        background: #333333;
+    }
+
+
+    .navbar-container .hamburger-lines .line1 {
+        transform-origin: 0% 0%;
+        transition: transform 0.4s ease-in-out;
+    }
+
+    .navbar-container .hamburger-lines .line2 {
+        transition: transform 0.4s ease-in-out;
+    }
+
+    .navbar-container .hamburger-lines .line3 {
+        transform-origin: 0% 100%;
+        transition: transform 0.4s ease-in-out;
+    }
+
+
+    .navbar .menu-items {
+        padding-top: 100px;
+        background: #fff;
+        height: 100vh;
+        max-width: 300px;
+        transform: translateX(-150%);
+        display: flex;
+        flex-direction: column;
+        margin-top: -8px;
+        margin-left: -140px;
+        padding-left: 130px;
+        transition: transform 0.5s ease-in-out;
+        box-shadow: 5px 0px 10px 0px #aaa;
+    }
+
+    .navbar .menu-items li {
+        margin-bottom: 2rem;
+        font-size: 5rem;
+        font-weight: bold;
+    }
+
+    .logo {
+        position: absolute;
+        top: 20px;
+        right: 15px;
+        font-size: 3rem;
+    }
+
+    .navbar-container input[type='checkbox']:checked~.menu-items {
+        transform: translateX(0);
+    }
+
+    .navbar-container input[type='checkbox']:checked~.hamburger-lines .line1 {
+        transform: rotate(45deg);
+    }
+
+    .navbar-container input[type='checkbox']:checked~.hamburger-lines .line2 {
+        transform: scaleY(0);
+    }
+
+    .navbar-container input[type='checkbox']:checked~.hamburger-lines .line3 {
+        transform: rotate(-45deg);
+    }
+
+    /* ##################### Food Category ################3 */
+    .food-container {
+        flex-direction: column;
+        align-items: stretch;
+    }
+
+    .food-type:not(:last-child) {
+        margin-bottom: 3rem;
+    }
+
+    .food-type {
+        box-shadow: 5px 5px 10px 0px #aaa;
+    }
+
+    .img-container {
+        margin: 0;
+    }
+}
+
+
+/* ############### Small Screen ############## */
+@media (max-width: 500px) {
+    html {
+        font-size: 50%;
+    }
+
+    .testimonial-container {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .food-menu-item {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .food-menu-container img {
+        margin: auto;
+    }
+
+    .contact-container {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .contact-content {
+        width: 90%;
+    }
+
+    .contact-img {
+        width: 90%;
+        margin: 3rem auto;
+    }
+}
+
+
+/* ############## Landscape mode ############ */
+@media (orientation: landscape) and (max-height: 500px) {
+    .showcase-container {
+        /* border: 6px solid green; */
+        height: 30vmax;
+    }
 }
